--- a/app/src/main/res/layout/activity_upload_employer.xml
+++ b/app/src/main/res/layout/activity_upload_employer.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/swiperefresh_recycler"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@id/search_bar"
+    android:scrollbars="vertical">
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -13,17 +21,18 @@
 
   </LinearLayout>
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_margin="30dp"
-        android:background="#F2ECFF"
-        android:padding="50dp"
-        android:text="Task Description"
-        android:textColor="#000"
-        android:textSize="12sp">
+  <EditText
+      android:id="@+id/task_desc"
+      android:layout_width="match_parent"
+      android:layout_height="150dp"
+      android:layout_margin="30dp"
+      android:background="#F2ECFF"
+      android:padding="50dp"
+      android:text="Task Description"
+      android:textColor="#000"
+      android:textSize="12sp">
 
-    </EditText>
+  </EditText>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,12 +48,13 @@
 
 
         <Button
+            android:id="@+id/btn_calender_stop_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="SET DEADLINE DATE"
-            android:textColor="#fff"
             android:background="#000"
-            android:padding="10dp">
+            android:padding="10dp"
+            android:text="SET DEADLINE DATE"
+            android:textColor="#fff">
 
         </Button>
 
@@ -68,6 +78,7 @@
           android:orientation="vertical">
 
         <Button
+            android:id="@+id/btn_calender_stop_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#000"
@@ -93,16 +104,30 @@
 
     </LinearLayout>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="UPLOAD"
-        android:textColor="#fff"
-        android:background="#000"
-        android:layout_margin="30dp">
+  <TextView
+      android:id="@+id/textView5"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="Assign To" />
 
-    </Button>
+  <Spinner
+      android:id="@+id/employee"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_weight="1" />
 
+  <Button
+      android:id="@+id/create_task"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_margin="30dp"
+      android:background="#000"
+      android:text="UPLOAD"
+      android:textColor="#fff">
+
+  </Button>
 
 
 </LinearLayout>
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
