--- a/app/src/main/res/layout/activity_task_employee.xml
+++ b/app/src/main/res/layout/activity_task_employee.xml
@@ -19,14 +19,14 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@id/taskToolbar">
 
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </androidx.recyclerview.widget.RecyclerView>
+            android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
 
 
     </androidx.core.widget.NestedScrollView>
