--- a/app/src/main/res/menu/task_menu.xml
+++ b/app/src/main/res/menu/task_menu.xml
@@ -2,7 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-       android:id="@+id/back"
-        android:title="Back"/>
+        android:id="@+id/communication_menu"
+        android:title="Communication" />
+
+    <item
+        android:id="@+id/AOB_menu"
+        android:title="AOB" />
 
 </menu>
